# lead

./: .gitignore  Cargo.toml  README.md  main.txt
examples/: fib.ed
lead/: .gitignore  Cargo.toml  README.md
lead-vm/: Cargo.toml
lead-vm/src/: air.rs  lib.rs  tests.rs
lead-vm/src/vm/: mod.rs  tests.rs
lead-w/: Cargo.toml
lead-w/src/: lib.rs  sourcespan.rs
lead/src/: error.rs  lib.rs  main.rs  pipeline.rs  transcode.rs
lead/src/air/: air.rs  block.rs  mod.rs
lead/src/lex/: mod.rs  span.rs  token.rs
lead/src/parse/: ast.rs  mod.rs
lead/tests/: cli.rs  examples.rs
leadc/: Cargo.toml
leadc/src/: cli.rs  main.rs  pipeline.rs
src/: error.rs  interpreter.rs  main.rs  repl.rs
src/air/: mod.rs  segment.rs  synatx.rs  syntax.rs
src/lex/: mod.rs  span.rs  token.rs
src/parse/: ast.rs  mod.rs  ops.rs
