[package]
authors = ["Mitchell Browne<mitchellbrowne01@gmail.com>"]
name = "lead-vm"
version = "0.1.0"
edition = "2021"

[lib]
name = "lead_vm"

[dependencies]
lead = { path = "../lead" }
log = "0.4.21"


[dev-dependencies]
ntest = "0.9.3"
env_logger = "0.11.3"
test-log = "0.2.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
