[package]
authors = ["Mitchell Browne<mitchellbrowne01@gmail.com>"]
name = "lead-w"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lead = { path = "../lead", default-features = false }
leadc = { path = "../leadc", default-features = false }
lead-vm = { path = "../lead-vm" }
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
primes = "0.4.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
