[package]
authors = ["Mitchell Browne"]
name = "lead"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TSPL = "0.0.12"
clap = { version = "4.5.4", features = ["derive"] }
miette = { version = "7.2.0" }
thiserror = "1.0.61"
lead-vm = { path = "../lead-vm" }
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[features]
default = ["enable-fancy-error"]
enable-fancy-error = ["miette/fancy"]
