[package]
name = "leadc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
lead-vm = { path = "../lead-vm" }
lead = { path = "../lead" }
thiserror = "1.0.61"
