[package]
authors = ["Mitchell Browne<mitchellbrowne01@gmail.com>"]
name = "leadc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
miette = { version = "7.2.0" }
lead-vm = { path = "../lead-vm" }
lead = { path = "../lead", default-features = false }
thiserror = "1.0.61"
log = "0.4.21"
log4rs = "1.3.0"

[features]
default = ["enable-fancy-error"]
enable-fancy-error = ["miette/fancy", "lead/enable-fancy-error"]
